# computational-geometry

./: CMakeCache.txt  CMakeLists.txt  CompGeo  DisplayImage  DrawPoints  DrawPolygon  Makefile  PolygonIntersection  PolygonUnion  README.md  cmake_install.cmake  draw_polygon.cpp  functions.cpp  geofunctions.cpp  geofunctions.h  notes.txt  opencv-example1.cpp  polygon_intersection.cpp  polygon_union.cpp  project1_part1.cpp
